@@ -1,0 +1,34 @@
+// { dg-options "-std=gnu++11" }
+// { dg-do link }
+
+// Copyright (C) 2013 Free Software Foundation, Inc.
+//
+// This file is part of the GNU ISO C++ Library.  This library is free
+// software; you can redistribute it and/or modify it under the
+// terms of the GNU General Public License as published by the
+// Free Software Foundation; either version 3, or (at your option)
+// any later version.
+
+// This library is distributed in the hope that it will be useful,
+// but WITHOUT ANY WARRANTY; without even the implied warranty of
+// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+// GNU General Public License for more details.
+
+// You should have received a copy of the GNU General Public License along
+// with this library; see the file COPYING3.  If not see
+// <http://www.gnu.org/licenses/>.
+
+#include <string>
+#include <iterator>
+
+struct A {
+  static constexpr std::iterator_traits<
+    std::string::iterator>::difference_type a = 1;
+};
+
+int main()
+{
+  std::string s = "foo";
+  auto it = s.begin();
+  it += A::a;
+}
